Bug 586685: All user-facing strings in JS are now localizable via stringbundle [r=dolske a=dolske] NOT. Everything but user facing strings being localized. Random whitespace fixes. Random styling changes. Also has Bug 587158 - Update intro-video URL to CDN'ed version And string changes. And Bug 586814 - Unable to close Tab groups

--- a/browser/base/content/tabview/tabview.css
+++ b/browser/base/content/tabview/tabview.css
@@ -347,11 +347,11 @@ input.name {
   padding-left: 20px;
 }
 
-input.name:hover {
+.title-container:hover input.name {
   border: 1px solid #ddd;
 }
 
-input.name-locked:hover {
+.title-container:hover input.name-locked {
   border: 1px solid transparent !important;
   cursor: default;
 }
@@ -366,7 +366,7 @@ input.defaultName {
   color: transparent;
 }
 
-input.defaultName:hover {
+.title-container:hover input.defaultName {
   color: #CCC;
 }
 
